# electronics-shop-project

./: pyproject.toml
src/: item.py  phone.py
tests/: test_item.py  test_phone.py
