[tool.poetry]
name = "my-electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["vlad_vosov <vlad.shvetesov@gmail.com>"]
readme = "README.md"
packages = [{include = "my_electronics_shop_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
